--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     
     <title>Document</title>
 </head>
@@ -17,9 +17,11 @@
         <div class="form">
           <form class="login-form">
             <input id="id" type="text" placeholder="id"/>
-            <input id="pw"type="password" placeholder="password"/>
-            <p id="button">LOGIN</p>
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+            <input id="name" type="text" placeholder="name"/>
+            <input id="pw" type="password" placeholder="password"/>
+            <input id="confirm-pw" type="password" placeholder="confirm password"/>
+            <p id="button">SIGN UP</p>
+            <p class="message">Already Registered? <a href="/login">login Page</a></p>
           </form>
         </div>
       </div>
