--- a/src/views/home/profitMonth.ejs
+++ b/src/views/home/profitMonth.ejs
@@ -15,7 +15,7 @@
         <br>
         <br>
         <br>
-        <img class="pic" src="/images/test.png" width="320px" height="220px">
+        <img class="pic" src="/images/total.png" width="620px" height="420px">
         <br>
         <br>
         <br>
