--- a/src/public/css/home/success.css
+++ b/src/public/css/home/success.css
@@ -7,6 +7,8 @@
     margin: 0 auto 100px;
     padding: 45px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo {
