--- a/src/views/home/profitMonth.ejs
+++ b/src/views/home/profitMonth.ejs
@@ -13,6 +13,19 @@
     <div class="main">
         <h1 class="logo">월별 수익분석</h1>
         <br>
+        <div class="select">
+            <a class="data">2021</a>
+            <a class="data">2022</a>
+        </div>
+        <div class="select">
+            <a class="data">recap</a>
+            <a class="data">total</a>
+            <a class="data">electro</a>
+            <a class="data">water</a>
+            <a class="data">monthFee</a>
+            <a class="data">part-time</a>
+            <a class="data">profit</a>
+        </div>
         <br>
         <br>
         <img class="pic" src="/images/total.png" width="620px" height="420px">
