--- a/src/views/home/profitMonth.ejs
+++ b/src/views/home/profitMonth.ejs
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/css/home/success.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/home/profitMonth.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,17 +15,17 @@
         <h1 class="logo">월별 수익분석</h1>
         <br>
         <div class="select">
-            <a class="data">2021</a>
-            <a class="data">2022</a>
+            <button id="year1" class="year_data">2021</button>
+            <button id="year2" class="year_data">2022</button>
         </div>
         <div class="select">
-            <a class="data">recap</a>
-            <a class="data">total</a>
-            <a class="data">electro</a>
-            <a class="data">water</a>
-            <a class="data">monthFee</a>
-            <a class="data">part-time</a>
-            <a class="data">profit</a>
+            <button id="recap" class="data">recap</button>
+            <button id="total" class="data">total</button>
+            <button id="electro" class="data">electro</button>
+            <button id="water" class="data">water</button>
+            <button id="monthFee" class="data">monthFee</button>
+            <button id="parttime" class="data">part-time</button>
+            <button id="profit" class="data">profit</button>
         </div>
         <br>
         <br>
